--- a/bin-release/AutoEvony.html
+++ b/bin-release/AutoEvony.html
@@ -33,11 +33,11 @@ body { margin: 0px; overflow:hidden }
 // -----------------------------------------------------------------------------
 // Globals
 // Major version of Flash required
-var requiredMajorVersion = 10;
+var requiredMajorVersion = 9;
 // Minor version of Flash required
 var requiredMinorVersion = 0;
 // Minor version of Flash required
-var requiredRevision = 0;
+var requiredRevision = 28;
 // -----------------------------------------------------------------------------
 // -->
 </script>
@@ -68,7 +68,7 @@ if ( hasProductInstall && !hasRequestedVersion ) {
 		"align", "middle",
 		"id", "AutoEvony",
 		"quality", "high",
-		"bgcolor", "#ffffff",
+		"bgcolor", "#869ca7",
 		"name", "AutoEvony",
 		"allowScriptAccess","sameDomain",
 		"type", "application/x-shockwave-flash",
@@ -84,7 +84,7 @@ if ( hasProductInstall && !hasRequestedVersion ) {
 			"align", "middle",
 			"id", "AutoEvony",
 			"quality", "high",
-			"bgcolor", "#ffffff",
+			"bgcolor", "#869ca7",
 			"name", "AutoEvony",
 			"allowScriptAccess","sameDomain",
 			"type", "application/x-shockwave-flash",
@@ -104,9 +104,9 @@ if ( hasProductInstall && !hasRequestedVersion ) {
 			codebase="http://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab">
 			<param name="movie" value="AutoEvony.swf" />
 			<param name="quality" value="high" />
-			<param name="bgcolor" value="#ffffff" />
+			<param name="bgcolor" value="#869ca7" />
 			<param name="allowScriptAccess" value="sameDomain" />
-			<embed src="AutoEvony.swf" quality="high" bgcolor="#ffffff"
+			<embed src="AutoEvony.swf" quality="high" bgcolor="#869ca7"
 				width="100%" height="100%" name="AutoEvony" align="middle"
 				play="true"
 				loop="false"
